# ia-utils

./: .gitignore  README.md  SKILL.md  ia-utils.py  pyproject.toml
.github/workflows/: release.yml
docs/: README.md  catalog-reference.md  collections.md  database-schema.md  example-session.md  index-reference.md  multi-volume.md  page-navigation.md  quick-reference.md  search-reference.md  tips-and-tricks.md  troubleshooting.md  workflow-guide.md
references/: REFERENCE.md
scripts/: install.sh
src/ia_utils/: __init__.py  cli.py
src/ia_utils/commands/: __init__.py  catalog_info.py  create_catalog.py  create_index.py  get_book_pages.py  get_page.py  get_page_stats.py  get_pages.py  get_pdf.py  get_text.py  get_url.py  info.py  list_files.py  ocr_page.py  rebuild_catalog.py  rebuild_index.py  search.py  search_catalog.py  search_ia.py  search_index.py
src/ia_utils/core/: __init__.py  database.py  ia_client.py  image.py  parser.py
src/ia_utils/utils/: __init__.py  logger.py  output.py  pages.py  slug.py  types.py
tests/: __init__.py  test_output.py  test_pages.py  test_parser.py  test_search_ia.py  test_slug.py
