[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ia-utils"
dynamic = ["version"]
description = "CLI tool to work with Internet Archive documents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "httpx[http2]>=0.27.0",
    "internetarchive>=3.5.0",
    "sqlite-utils>=3.30.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pillow>=10.0.0",
    "remotezip>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Repository = "https://github.com/mhalle/ia-utils"
Homepage = "https://github.com/mhalle/ia-utils"
Download = "https://github.com/mhalle/ia-utils/releases/latest/download/ia-utils.zip"

[project.scripts]
ia-utils = "ia_utils.cli:cli"

[tool.uv]
managed = true

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/ia_utils/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ia_utils"]
